# py-cc-sbf

./: README.md  pyproject.toml
examples/: concatenate_sbf.py  copy_class.py  generate_test_data.py  process_parameterized_data.py  process_test_data.py  sbf_copy_class.py  shuffle_sbf.py  sort_sbf_on_pingnumber.py
src/py_cc_sbf/: .cc_sbf.py.swp  __init__.py  cc_sbf.py
